--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>crudJvaScripts</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <div class="conteudo">
+    <div class="topo">
+      <input type="text" id="inputNovaTarefa" placeholder="adicioneTarefa">
+      <button id="btnAddTarefa">
+        <i class="fa fa-plus"
+      </button>
+    </div>
+  </div>
 
 </body>
 </html>
