--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
     <ul id="listaTask">
       <li>
         <span class="textoTarefa">Tarafe-1</span>
-        <button class="btnUpdate">
-          <i class="fa fa-pencil"></i>
-        </button>
-        <button class="btnDelete">
-          <i class="fa fa-trash"></i>
-        </button>
+        <div>
+          <button class="btnUpdate">
+            <i class="fa fa-pencil"></i>
+          </button>
+          <button class="btnDelete">
+            <i class="fa fa-trash"></i>
+          </button>
+        </div>
       </li>
     </ul>
 
