create function js

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <li>
         <span class="textoTarefa">Tarafe-1</span>
         <div>
-          <button class="btnUpdate">
+          <button class="btnAction">
             <i class="fa fa-pencil"></i>
           </button>
-          <button class="btnDelete">
+          <button class="btnAction">
             <i class="fa fa-trash"></i>
           </button>
         </div>
@@ -33,6 +33,6 @@
     </ul>
 
   </div>
-
+  <script src="scripts.js"></script>
 </body>
 </html>
