create function delete

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <ul id="listaTask">
       <li>
-        <span class="textoTarefa">Tarafe-1</span>
+        <span class="textoTarefa">example: take the car to wash</span>
         <div>
           <button class="btnAction">
             <i class="fa fa-pencil"></i>
