create function toggle

--- a/index.html
+++ b/index.html
@@ -31,8 +31,26 @@
         </div>
       </li>
     </ul>
-
   </div>
+
+  <div id="winEdit">
+    <button id="winEditBtnClose" >
+      <i class="fa fa-remove"></i>
+    </button>
+    <h2 id="idtaskUpdate">#1000</h2>
+    <hr>
+    <form id="form">
+      <div class="frm-rons">
+        <label for="name">Name</label>
+        <input type="text" id="inputTaskEdit" name="name">
+      </div>
+      <div class="frm-rons">
+        <button id="btnUpdateTtask">Salvar</button>
+      </div>
+    </form>
+  </div>
+  <div id="winEditFundo"></div>
+
   <script src="./scripts.js"></script>
 </body>
 </html>
