--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <header class="container">
+  </header>
 
   <div class="content">
 
@@ -41,5 +43,6 @@
   <div id="winEditFundo"></div>
 
   <script src="./scripts.js"></script>
+
 </body>
 </html>
