create input checkbox de mode

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 <body>
   <header class="container">
+    <div class="checkbox">
+      <input type="checkbox" id="rosa">
+      <input type="checkbox" id="rosa">
+      <input type="checkbox" id="rosa">
+      <input type="checkbox" id="rosa">
+      <input type="checkbox" id="rosa">
+    </div>
   </header>
 
   <div class="content">
