create five mode de classe css

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
   <header class="container">
     <div class="checkbox">
-      <input type="checkbox" id="rosa">
-      <input type="checkbox" id="rosa">
-      <input type="checkbox" id="rosa">
-      <input type="checkbox" id="rosa">
-      <input type="checkbox" id="rosa">
+      <input type="checkbox" id="rosa" name="cor">
+      <input type="checkbox" id="amarelo" name="cor">
+      <input type="checkbox" id="mar" name="cor">
+      <input type="checkbox" id="rosa2" name="cor">
+      <input type="checkbox" id="rosa" name="cor">
     </div>
   </header>
 
